- Revived the project
- Redesigned with an Object Oriented Approach
- Load into memory on startup, don't constantly read from files
- Stubbed it out and came up the general idea

4/23/2025
~~~~~~~~~~
- Started to work on the reading/writing and observer loop
- Implemented logger, filehelper
- Updated problems and server to easily go to and from CSV

4/26/2025
~~~~~~~~~~
- Decided I wanted a Cache to minimize queries
- Implemented caching basics
- Added JSON support in file helper
- Setup basic querying 

5/28/2025
~~~~~~~~~~
- Changing file structure to use individual JSON files
- Removed logger
- Split file_helper into JSON helper, and CSV helper, kept some functionality in there
- Reviewed old code, changed files to JSON instead of CSV
- Minor updates all around

5/30/2025
~~~~~~~~~~
- made the testing bits more modular and representative of the final app (now spam.py)
- implemented server settings
- implemented the contest alerts bucket as well as the static buckets
- setup the stubs of the observer notifications
- fixed buckets not removing old problems when adding new ones, had duplicates 
- implemented a problem manager, this solved the above problem, also selects problems
- implemented day of week buckets

5/31/2025
~~~~~~~~~~
- added the alert manager to handle the connection to the cogs 
- minor refactoring the base classes
- added a setting to track previously sent problems 
- made a problem helper for minor things related to lc problems

6/4/2025
~~~~~~~~~~
- added a server role setting
- added some helper funcs to query manager
- implemented alert manager functionality for contest time and static alerts

6/5/2025
~~~~~~~~~~
- general restructure and rewrite
- combined dowbuckets and problembuckets
- decoupled some classes
- added the mediator folder
- moved utils into the core
- added an alert class 
- split spam.py up into app, testing/generator, and services/initializer
- implemented some enums to use instead of strings
- tons of other refactoring