@@ -2,20 +2,22 @@
 # just contains additional server settings 
 class ServerSettings:
     def __init__(self,
-                 postingChannelID: int = None,
-                 weeklyContestAlerts: bool = False,
-                 biweeklyContestAlerts: bool = False,
-                 officialDailyAlerts: bool = False,
-                 contestAlertIntervals: list[int] = None,
-                 duplicatesAllowed: bool = False,
-                 alertRoleID: int = None,
-                 useAlertRole: bool = False
+                 postingChannelID: int = None,            # the channel ID where alerts get posted
+                 weeklyContestAlerts: bool = False,       # whether to alert for weekly contests
+                 biweeklyContestAlerts: bool = False,     # whether to alert for biweekly contests
+                 officialDailyAlerts: bool = False,       # whether to alert for official daily problems
+                 contestTimeIntervals: list[int] = None,  # list of intervals in minutes for contest time alerts
+                 contestTimeAlerts: bool = False,         # whether to alert for contest time
+                 duplicatesAllowed: bool = False,         # whether duplicates are allowed in the problem selection
+                 alertRoleID: int = None,                 # the role ID to mention in alerts, if applicable
+                 useAlertRole: bool = False               # whether to use the alert role in the alerts
                  ):
         self.postingChannelID = postingChannelID
         self.weeklyContestAlerts = weeklyContestAlerts
         self.biweeklyContestAlerts = biweeklyContestAlerts
         self.officialDailyAlerts = officialDailyAlerts
-        self.contestAlertIntervals = contestAlertIntervals if contestAlertIntervals is not None else []
+        self.contestTimeIntervals = contestTimeIntervals if contestTimeIntervals is not None else []
+        self.contestTimeAlerts = contestTimeAlerts
         self.duplicatesAllowed = duplicatesAllowed
         self.alertRoleID = alertRoleID
         self.useAlertRole = useAlertRole
@@ -25,7 +27,8 @@ class ServerSettings:
                 f"\t\tweeklyContestAlerts={self.weeklyContestAlerts}\n"
                 f"\t\tbiweeklyContestAlerts={self.biweeklyContestAlerts}\n"
                 f"\t\tofficialDailyAlerts={self.officialDailyAlerts}\n"
-                f"\t\tcontestAlertIntervals={self.contestAlertIntervals}\n"
+                f"\t\tcontestTimeIntervals={self.contestTimeIntervals}\n"
+                f"\t\tcontestTimeAlerts={self.contestTimeAlerts}\n"
                 f"\t\tduplicatesAllowed={self.duplicatesAllowed}\n"
                 f"\t\talertRoleID={self.alertRoleID}\n"
                 f"\t\tuseAlertRole={self.useAlertRole}\n"
@@ -37,7 +40,8 @@ class ServerSettings:
             "weeklyContestAlerts": self.weeklyContestAlerts,
             "biweeklyContestAlerts": self.biweeklyContestAlerts,
             "officialDailyAlerts": self.officialDailyAlerts,
-            "contestAlertIntervals": self.contestAlertIntervals,
+            "contestTimeIntervals": self.contestTimeIntervals,
+            "contestTimeAlerts": self.contestTimeAlerts,
             "duplicatesAllowed": self.duplicatesAllowed,
             "alertRoleID": self.alertRoleID,
             "useAlertRole": self.useAlertRole
@@ -50,7 +54,8 @@ class ServerSettings:
             weeklyContestAlerts=settings.get("weeklyContestAlerts", False),
             biweeklyContestAlerts=settings.get("biweeklyContestAlerts", False),
             officialDailyAlerts=settings.get("officialDailyAlerts", False),
-            contestAlertIntervals=settings.get("contestAlertIntervals", []),
+            contestTimeIntervals=settings.get("contestTimeIntervals", []),
+            contestTimeAlerts=settings.get("contestTimeAlerts", []),
             duplicatesAllowed=settings.get("duplicatesAllowed", False),
             alertRoleID=settings.get("alertRoleID"),
             useAlertRole=settings.get("useAlertRole", False)
